# img2ico

./: .gitignore  README.md  README_CN.md  copy-wasm.mjs  eslint.config.mts  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
example/nodejs/: .gitignore  README.md  index.js  package-lock.json  package.json
example/vite-react-ts/: README.md  index.html  package-lock.json  package.json  vite.config.ts
example/vite-react-ts/src/: App.css  App.tsx  index.css
src/: browser.ts  cli.ts  core.ts  index.ts  node.ts  types.ts  utils.ts
wasm/: Cargo.toml
wasm/src/: lib.rs
web/: index.html  main.ts  style.css  vite.config.mts
