[package]
name = "img2ico-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1" }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "webp"] }

[profile.release]
opt-level = 's'
lto = true
codegen-units = 1